# rust

./: .gitignore  CLAUDE.md  README.md
Arc/: Cargo.toml
Arc/src/: main.rs
Cell/: Cargo.toml
Cell/src/: main.rs
Future/: Cargo.toml
Future/src/: main.rs
Pin/: Cargo.toml
Stete-patten/: Cargo.toml
Stete-patten/src/: lib.rs  main.rs
Stream/: Cargo.toml
Stream/src/: main.rs
TRNovel/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  lefthook.yaml  release.sh  release.toml  todo.md
TRNovel/src/: errors.rs  file_list.rs  lib.rs  utils.rs
Threads/src/: main.rs
Vector/src/: main.rs
adder/src/: lib copy.rs  lib.rs
aggregator/src/: lib.rs
async-test/: Cargo.toml
async-test/src/: main.rs
async_test/: Cargo.toml
async_test/src/: main copy.rs  main.rs
channel/src/: main.rs
closures/src/: main copy.rs  main.rs
day/src/: main.rs
deref/src/: main.rs
docs/: README.md  Rust_Pin与Unpin知识手册.md  Rust_String知识手册.md  Rust_Trait知识手册.md  Rust学习路线图与计划书.md  Rust快速参考手册.md  Rust智能指针知识手册.md  Rust模块系统与包管理手册.md  Rust泛型Trait与生命周期知识手册.md  Rust测试与文档手册.md  Rust迭代器知识手册.md  Rust错误处理知识手册.md  Rust闭包知识手册.md  Rust集合类型与迭代器手册.md  借用与引用.md  枚举与模式匹配.md  结构体语法.md
enums/src/: main.rs
error/src/: main.rs
games/: Cargo.toml
matchs/: Cargo.toml
memory_leak/: Cargo.toml
minigrep_plus/: Cargo.toml
my_crate/: Cargo.toml
my_crate/src/: lib.rs
pages/: Cargo.toml
share_state/: Cargo.toml
src/: lib.rs  main.rs
superpower/: Cargo.toml
trait_generics_lifetime/: Cargo.toml
workspaces/: Cargo.toml
xunhuan/: Cargo.toml
yibutrait/: Cargo.toml
(+165 files in other folders)
